[tool.poetry]
name = "my_krml_24669044"
version = "1.0.0"
description = "A package for doing great things!"
authors = ["Rohan Yadav"]
license = "None"
readme = "README.md"
packages = [
    { include = "my_krml_24669044", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"